--- a/style.css
+++ b/style.css
@@ -9,4 +9,13 @@
     width: 100%;
     height: 100vh;
     background-color: #e3f9ff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.calculator{
+    background: #3a4452;
+    padding: 20px;
+    border-radius: 10px;
 }
