Styled the display area in the css

--- a/style.css
+++ b/style.css
@@ -33,3 +33,16 @@
     cursor: pointer;
     margin: 10px;
 }
+
+form .display{
+    display: flex;
+    justify-content: flex-end;
+    margin: 20px 0;
+}
+
+form .display input{
+    text-align: right;
+    flex: 1;
+    font-size: 45px;
+    box-shadow: none;
+}
