--- a/style.css
+++ b/style.css
@@ -83,20 +83,11 @@ form input.operator{
 
 /* Media Query for screens with a maximum width of 480px */
 @media screen and (max-width: 480px) {
-    .calculator {
-        padding: 10px;
+    .container{
         display: block; /* Change to block display */
     }
 
-    .calculator form input {
-        width: 40px;
-        height: 40px;
-        font-size: 16px;
-        margin: 5px;
-    }
-
-    .usage-guide {
-        margin: 10px 0;
-        display: block; /* Change to block display */
+    .usage-guide{
+       margin-right: 50px;
     }
 }
